changes to about.me

--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -1,12 +1,13 @@
 <h2>Johan Brichau</h2>
 <p><img src="http://www.gravatar.com/avatar/833c91a5349e8d266b45ffc496d11819.png" alt="Johan Brichau" title="Follow me on Twitter @johanbrichau"  class="img-rounded floatLeft" />			
-<p> Founder and software architect at <a href="http://www.inceptive.be">www.inceptive.be</a> and <a href="http://www.yesplan.be">www.yesplan.be</a>.</p>					
-<p><iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=jbrichau&repo=jbrichau.github.com&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="80px" height="20px"></iframe>&nbsp;<iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=jbrichau&repo=jbrichau.github.com&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="98px" height="20px"></iframe></p>
+<p> Founder and software architect at <a href="http://www.inceptive.be">www.inceptive.be</a> and <a href="http://www.yesplan.be">www.yesplan.be</a>, developing innovative web applications with Smalltalk using <a href="http://www.seaside.st">Seaside</a>, <a href="http://www.pharo.org">Pharo</a> and <a href="http://seaside.gemtalksystems.com">Gemstone/S</a>.</p>					
 <p><a href="https://twitter.com/johanbrichau" class="twitter-follow-button" data-link-color="#0069D6" data-show-count="true">Follow @johanbrichau</a></p>
 <p>
 	<ul class="buttons unstyled">
 	  <li><a href="http://github.com/jbrichau" rel="me" class="social github" title="Go to github.com/jbrichau" target="_blank"></a></li>
 	  <li><a href="http://be.linkedin.com/in/johanbrichau" rel="me" class="social linkedin" title="Go to LinkedIn profile" target="_blank"></a></li>
-	  <li><a href="http://www.twitter.com/johanbrichau" rel="me" class="social twitter" title="Go to twitter.com/erjjones" target="_blank"></a></li>		
+	  <li><a href="http://www.twitter.com/johanbrichau" rel="me" class="social twitter" title="Go to twitter.com/erjjones" target="_blank"></a></li>
+	  <li><a href="https://plus.google.com/u/0/114561259331203581412/posts" rel="me" class="social gplus" title="Go to Google Plus profile" target="_blank"></a></li> 
+	  <li><a href="http://feeds.feedburner.com/JohanBrichau" rel="me" class="social rss" title="Go to feedburner jbrichau rss feed" target="_blank"></a></li>
 	</ul>
 </p>
