--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -1,5 +1,5 @@
 <h2>Johan Brichau</h2>
-<p><img src="http://www.gravatar.com/avatar/833c91a5349e8d266b45ffc496d11819.png" alt="Johan Brichau" title="Follow me on Twitter @johanbrichau"  class="img-rounded floatLeft" />			
+<p><img src="../img/Johan2013.jpg" alt="Johan Brichau" title="Follow me on Twitter @johanbrichau"  class="img-rounded floatLeft" />			
 <p> Founder and software architect at <a href="http://www.inceptive.be">www.inceptive.be</a> and <a href="http://www.yesplan.be">www.yesplan.be</a>, developing innovative web applications with Smalltalk using <a href="http://www.seaside.st">Seaside</a>, <a href="http://www.pharo.org">Pharo</a> and <a href="http://seaside.gemtalksystems.com">Gemstone/S</a>.</p>					
 <p><a href="https://twitter.com/johanbrichau" class="twitter-follow-button" data-link-color="#0069D6" data-show-count="true">Follow @johanbrichau</a></p>
 <p>
