--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,26 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link href="http://fuelcdn.com/fuelux/2.2/css/fuelux.css" rel="stylesheet" /> 
-	<link href="http://fuelcdn.com/fuelux/2.2/css/fuelux-responsive.css" rel="stylesheet" />
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js" type="text/javascript"></script>
-	<script src="http://fuelcdn.com/fuelux/2.2/loader.min.js" type="text/javascript"></script>
+    <link href="http://fuelcdn.com/fuelux/2.2/css/fuelux.css" rel="stylesheet" />
+	  <link href="http://fuelcdn.com/fuelux/2.2/css/fuelux-responsive.css" rel="stylesheet" />
+    <link href="/css/syntax.css" rel="stylesheet">
+	  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js" type="text/javascript"></script>
     <link href="/css/docs.css" rel="stylesheet">
-    <link href="/js/google-code-prettify/prettify.css" rel="stylesheet">	
-	<link rel="shortcut icon" href="/favicon.ico">    
+    <link href="/js/google-code-prettify/prettify.css" rel="stylesheet">
+	<link rel="shortcut icon" href="/favicon.ico">
   </head>
   <body data-spy="scroll" data-target=".subnav" data-offset="50">
-	{% include navigation.html %}  
-	<div class="container">	
+	{% include navigation.html %}
+	<div class="container">
 		<div class="marketing">
 		{{ content }}
-		</div>		 
-	 </div>   
+		</div>
+	 </div>
 	{% include footer.html %}
-    <script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>    
-    
-	<script src="/js/custom.js" type="text/javascript"></script>	
-	
+    <script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
+
+	<script src="/js/custom.js" type="text/javascript"></script>
+
 	<script type="text/javascript">
 		/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
 		var disqus_shortname = 'ericjones'; // required: replace example with your forum shortname
@@ -38,7 +38,7 @@
 			(document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
 		}());
 	</script>
-	
+
 	<!-- Google Analytics -->
 	<script type="text/javascript">
 
@@ -52,6 +52,6 @@
 		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
 	  })();
 
-	</script>	
+	</script>
   </body>
 </html>
